# r-glaredb

./: .Rbuildignore  .editorconfig  .gitignore  404.html  DESCRIPTION  LICENSE.html  NAMESPACE  NEWS.md  README.Rmd  README.md  Taskfile.yml  _pkgdown.yml  authors.html  configure  index.html  pkgdown.yml  search.json  sitemap.xml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: check.yml  pkgdown.yml  release-lib.yml
.task/checksum/: build-extendr-wrappers
R/: 000-wrappers.R  as-external-class.R  connect.R  execution.R  extendr-wrappers.R  glaredb-package.R  query.R  table.R  utils.R  zzz.R
dev/: LICENSE.html  authors.html  generate-lib-sums.R  index.html  pkgdown.yml  search.json  sitemap.xml
dev/news/: index.html
dev/reference/: RGlareDbConnection.html  as_glaredb_table.RGlareDbExecutionOutput.html  as_glaredb_table.html  glaredb-package.html  glaredb.html  glaredb_connect.html  glaredb_execute.html  glaredb_sql.html  index.html
man/: as_glaredb_table.Rd  glaredb-package.Rd  glaredb_connect.Rd  glaredb_execute.Rd  glaredb_sql.Rd
news/: index.html
reference/: RGlareDbConnection.html  as_glaredb_table.RGlareDbExecutionOutput.html  as_glaredb_table.html  glaredb-package.html  glaredb.html  glaredb_connect.html  glaredb_execute.html  glaredb_sql.html  index.html
src/: Makevars  Makevars.in  Makevars.win  entrypoint.c  glaredb-win.def  init.c
src/rust/: Cargo.toml  api.h
src/rust/src/: connect.rs  connection.rs  environment.rs  error.rs  execution.rs  lib.rs  memtable.rs  runtime.rs  table.rs
tests/: testthat.R
tests/testthat/: test-connect.R  test-execution.R  test-table.R
tests/testthat/_snaps/: connect.md  execution.md
tools/: lib-sums.tsv  prep-lib.R
