[package]
name = "r-glaredb"
version = "0.0.2"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
savvy = "0.6.5"
datafusion = { version = "41.0.0", features = ["avro"] }
tokio = { version = "1", features = ["full"] }
arrow = { version = "50.0.0", features = ["ffi"] }
thiserror = "1.0"
async-trait = "0.1.81"
once_cell = "1.19.0"
glaredb = { git = "https://github.com/GlareDB/glaredb", tag = "v0.9.4" }
arrow_util = { git = "https://github.com/GlareDB/glaredb", tag = "v0.9.4" }
terminal_util = { git = "https://github.com/GlareDB/glaredb", tag = "v0.9.4" }

# Prevent dynamic linking of lzma, which comes from datafusion
lzma-sys = { version = "*", features = ["static"] }
