[package]
name = "r-glaredb"
version = "0.0.3"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[dependencies]
async-trait = "0.1.82"
glaredb = { git = "https://github.com/GlareDB/glaredb", tag = "v0.9.5" }
lzma-sys = { version = "*", features = ["static"] } # Prevent dynamic linking of lzma, which comes from datafusion
once_cell = "1.19.0"
savvy = "0.6.5"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
